k8s/base/deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mcco-app
  labels:
    app: mcco-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mcco-app
  template:
    metadata:
      labels:
        app: mcco-app
    spec:
      containers:
      - name: mcco-app
        image: docker.io/thmsplcd293/mcco_connected:flask_app
        volumeMounts:
        - name: app-logs
          mountPath: /app/logs
        - name: app-status
          mountPath: /app/status
        
      volumes:
      - name: app-logs
        persistentVolumeClaim:
          claimName: app-logs-pvc
      - name: app-status
        persistentVolumeClaim:
          claimName: app-status-pvc
