k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcco-app-service
  labels:
    app: mcco-app
spec:
  type: ClusterIP
  selector:
    app: mcco-app
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
