k8s/base/ingress-mcco.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcco-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.passHostHeader: "true"
    treafik.backend.loadbalancer.stickiness: "true"
spec:
  rules:
  - host: minecraft-server.com
    http:
      paths:
        - path: /mcco
          backend:
            service:
              name: mcco-app-service
              port:
                number: 5000
